# Test-Automation-Bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  bot.yaml  check_syntax.py  finalize_fixes.py  fix_github_actions.py  fix_imports.py  fix_ruff_errors.py  fix_syntax_errors.py  pyproject.toml  task.md
.github/workflows/: ci.yml
src/website_test_bot/: __init__.py  cli.py  config.py
src/website_test_bot/crawler/: __init__.py  crawler.py  models.py
src/website_test_bot/examples/: __init__.py  todo_app.py
src/website_test_bot/generator/: __init__.py  generator.py  models.py
src/website_test_bot/reporter/: __init__.py  reporter.py
src/website_test_bot/runner/: __init__.py  models.py  runner.py
