[tool.poetry]
name = "website-test-bot"
version = "0.1.0"
description = "Automated website testing bot using Playwright and Pytest"
authors = ["Or Amoyal"]
readme = "README.md"
packages = [{include = "website_test_bot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
playwright = "^1.44.0"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-html = "^4.1.1"
pydantic = "^2.5.2"
rich = "^13.6.0"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.2"
urllib3 = "^2.1.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.4"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
bot = "website_test_bot.cli:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]
ignore = ["ANN101", "ANN102"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 