[tool.poetry]
name = "website-test-bot"
version = "0.1.0"
description = "Automated website testing bot using Playwright and Pytest"
authors = ["Or Amoyal"]
readme = "README.md"
packages = [{include = "website_test_bot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
playwright = "^1.44.0"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-html = "^4.1.1"
pytest-rerunfailures = "^13.0"
pydantic = "^2.5.2"
rich = "^13.6.0"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.2"
urllib3 = "^2.1.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.4"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
bot = "website_test_bot.cli:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 